<resources>
    <string name="app_name">AnimalLovers</string>
    <string name="string_empty" />
    <string name="txt_login_button">Inscrever-se</string>
    <string name="content_app_logo">Logo do APP AnimaLovers</string>
    <string name="txt_have_account">Não possui uma conta ?</string>
    <string name="txt_login_btn">Login</string>
    <string name="txt_realize_register">Para continuar, realize o seu cadastro.</string>
    <string name="txt_realize_reset_senha">Informe seu e-mail, e nele receberá um link para redefinição de senha</string>
    <string name="txt_btn_reset_senha">Enviar link de redefinição</string>
    <string name="txt_email_user">Digite seu e-mail</string>
    <string name="txt_password_again">Repita sua senha</string>
    <string name="txt_password">Digite sua senha</string>
    <string name="txt_create">Criar</string>
    <string name="txt_realize_login">Para continuar, realize o login.</string>
    <string name="txt_email_login">Digite seu e-mail</string>
    <string name="txt_password_login">Digite sua senha</string>
    <string name="txt_create_account">Criar conta</string>
    <string name="txt_forget_password">Esqueci minha senha</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_sair">Sair</string>
    <string name="txt_clinicas">Clínicas Veterinarias</string>

    <string name="txt_pet_search">Busque nomes</string>
    <string name="txt_alterar">Salvar</string>
    <string name="txt_configs">Configurações</string>
    <string name="txt_nome_padrao">Guilherme</string>
    <string name="txt_local_padrao">Brasil - SP</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="txt_mais">Mais</string>
    <string name="txt_foryou">Para Você</string>
    <string name="txt_add">Adicionar</string>
    <string name="txt_search">Pesquisar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_descobrir">Descobrir</string>
    <string name="txt_logo_feed">Logo AnimaLovers</string>
    <string name="txt_procurar">Botão Procurar</string>
    <string name="txt_dehaze_feed">Botão abrir barra lateral</string>
    <string name="txt_what_do_you_think">No que você está pensando ?</string>
    <string name="txt_publishment">Publicar</string>
    <string name="txt_gui_taka">Guilherme Takahashi</string>
    <string name="txt_summary">Resumo</string>
    <string name="txt_animal_name">Nome do animal</string>
    <string name="txt_add_publi">Adicionar foto</string>
    <string name="txt_demonstrate">Insira uma legenda...</string>
    <string name="txt_space_to_publicate">Espaço para a imagem da publicação</string>
    <string name="txt_name_pet">Nome</string>
    <string name="txt_age_pet">Idade</string>
    <string name="txt_heigt_pet">Peso</string>
    <string name="txt_type_pet">Tipo</string>
    <string name="txt_raca_pet">Raça</string>
    <string name="txt_desc_pet">Descrição</string>
    <string name="txt_sex_pet">Sexo</string>
    <string name="txt_masc_pet">Macho</string>
    <string name="txt_fem_pet">Fêmea</string>
    <string name="txt_cadastrar">Cadastrar</string>
    <string name="txt_salvar">Salvar</string>
    <string name="content_feed">Imagem representando um animal</string>
    <string name="content_like">Botão favoritar</string>
    <string name="content_comment">Botão comentário</string>
    <string name="content_share">Botão compartilhar</string>
    <string name="txt_publish">Publicar</string>
    <string name="content_profile_pet">Botão para acessar perfil do pet</string>
    <string name="content_user_photo">Foto usuário</string>
    <string name="txt_change_profile">Selecionar pet</string>
    <string name="txt_register">Adicionar pet</string>
    <string name="txt_animal_sex">Sexo</string>
    <string name="txt_animal_age">Idade</string>
    <string name="txt_animal_heigt">Peso</string>
    <string name="txt_animal_masc">Macho</string>
    <string name="txt_animal_age_example">3</string>
    <string name="txt_animal_heigt_example">5</string>
    <string name="txt_animal_resume">Animal muito amigável e bem comportado.</string>
    <string name="txt_personal_contact">Contato pessoal</string>
    <string name="txt_notify">Notificações</string>
    <string name="txt_chat">Chat</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_cidade_padrao">SP</string>
    <string name="slash">-</string>

    <string name="title_dialog_cancel_friendship">Desfazer Amizade</string>
    <string name="cancel_friendship_request">Desfazer pedido de amizade</string>
    <string name="cancel">Cancelar</string>
    <string name="mutual_friends">Amigos em comum: </string>

    <string name="user_chat_photo">Foto do usuário do chat</string>
    <string name="txt_chat_default">Salve</string>
    <string name="txt_latest_message">Ultima mensagem enviada por esse usuario</string>
    <string name="txt_example_message">This is my message</string>
    <string name="txt_send_message">Enviar</string>
    <string name="txt_enter_message">Entre com a mensagem</string>

    <string name="comments">Comentários</string>
    <string name="type_your_comment">Digite seu comentário</string>
    <string name="type_your_report">Descreva sua denuncia</string>

    <string name="delete_comment_title">Excluir comentário</string>
    <string name="delete_comment_message">Deseja realmente excluir seu comentário?</string>

    <string name="report_comment">Denunciar Comentário</string>
    <string name="tv_instructions_report_comment">Informe o motivo pelo qual você acha que esse comentário não deve ser aceito no AnimalLovers</string>

    <string name="report_post">Denunciar Publicação</string>
    <string name="tv_instructions_report_post">Informe o motivo pelo qual você acha que essa publicação não deve ser aceita no AnimalLovers</string>

    <string name="delete_post_title">Excluir publicação</string>
    <string name="delete_post_message">Deseja realmente excluir sua publicação?</string>

    <string name="ver">Ver</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="sexual_content">Teor sexual</string>
    <string name="explicit_violence">Violência explícita</string>
    <string name="fake_news">Noticia falsa</string>
    <string name="i_disliked_it">Não gostei</string>
    <string name="other">Outro</string>
    <string name="violate_usage_rules">Viola as regras de uso</string>
    <string name="is_offensive">É ofensivo</string>
    <string name="instruction_type_report">Se quiser, pode descrever sua denuncia para auxiliar na análise</string>
    <string name="wrong_photo">Foto incoerente</string>
    <string name="spam">Spam</string>
    <string name="criminal_content">Conteúdo criminoso</string>
    <string name="text_copied_to_clipboard">Comentário copiado para a área de transferência</string>
    <string name="choose_a_reason_to_report_comment">Escolha um dos motivos para realizar a denuncia do comentário, ou descreva a sua denuncia</string>
    <string name="commented_your_post"> comentou na sua Pet-foto</string>
    <string name="liked_your_post"> curtiu sua Pet-foto</string>
    <string name="liked_your_comment"> curtiu seu comentário</string>
    <string name="friendship_request_accepted">Solicitação de amizade aceita</string>
    <string name="friendship_request_received">Solicitação de amizade recebida</string>
    <string name="txt_anos">anos</string>
    <string name="txt_kilos">Kilos</string>
    <string name="txt_email_example">lakjsdfbhlkasjbfhl@gmail.com</string>
    <string name="txt_alter_data_user">Alterar dados</string>
    <string name="online">Online</string>
    <string name="empty"></string>
    <string name="txt_you_sent_last_message">Você:</string>

    <string-array name="racas">
        <item>Cachorro</item>
        <item>Gato</item>
        <item>Pássaro</item>
        <item>Outro</item>
    </string-array>

    <string-array name="pesos" >
        <item>Kilos</item>
        <item>Gramas</item>
        <item>Miligramas</item>
    </string-array>

    <string-array name="tempo">
        <item>Anos</item>
        <item>Meses</item>
        <item>Semanas</item>
    </string-array>
</resources>