<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/chatButton"
        android:icon="@drawable/ic_baseline_question_answer_24"
        android:title="@string/txt_chat" />

    <item
        android:id="@+id/foruButton"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/txt_foryou" />

    <item
        android:id="@+id/addButton"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/txt_add" />

    <item
        android:id="@+id/notificacaoButton"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/txt_notify" />
    <item
        android:id="@+id/pesquisarButton"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/txt_search" />
</menu>