<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_person_chat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_profile_chat_picture"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_margin="8dp"
            android:contentDescription="@string/user_chat_photo"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/txt_gui_taka"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_profile_chat_picture"
            app:layout_constraintTop_toTopOf="@id/iv_profile_chat_picture" />

        <TextView
            android:id="@+id/tv_message_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_chat_default"
            app:layout_constraintBottom_toBottomOf="@id/iv_profile_chat_picture"
            app:layout_constraintStart_toStartOf="@id/tv_name_chat"
            app:layout_constraintTop_toBottomOf="@id/tv_name_chat" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>